Code/Adventure-Map-Generator/Assets/Scripts/Interpreter/Parser/DazelParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Patrick/Documents/GitHub/p4/Code/Interpreter/Interpreter/Antlr\Dazel.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
public partial class DazelParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WS=6, COMMENT=7, SCREEN=8, ENTITY=9, 
		MOVE_PATTERN=10, MAP=11, ONSCREENENTERED=12, ENTITIES=13, EXITS=14, DATA=15, 
		PATTERN=16, IDENTIFIER=17, INT=18, FLOAT=19, STRING=20, L_PARANTHESIS=21, 
		R_PARANTHESIS=22, L_BRACKET=23, R_BRACKET=24, L_BRACES=25, R_BRACES=26, 
		ASSIGN_OP=27, LESSTHAN_OP=28, GREATERTHAN_OP=29, PLUS_OP=30, MINUS_OP=31, 
		MULTIPLICATION_OP=32, DIVISION_OP=33;
	public const int
		RULE_start = 0, RULE_gameObject = 1, RULE_gameObjectBlock = 2, RULE_empty = 3, 
		RULE_gameObjectContents = 4, RULE_gameObjectContent = 5, RULE_statementList = 6, 
		RULE_statementBlock = 7, RULE_statement = 8, RULE_repeatLoop = 9, RULE_ifStatement = 10, 
		RULE_statementExpression = 11, RULE_assignment = 12, RULE_expression = 13, 
		RULE_sumExpression = 14, RULE_factorExpression = 15, RULE_terminalExpression = 16, 
		RULE_sumOperation = 17, RULE_factorOperation = 18, RULE_functionInvocation = 19, 
		RULE_memberAccess = 20, RULE_valueList = 21, RULE_value = 22, RULE_array = 23;
	public static readonly string[] ruleNames = {
		"start", "gameObject", "gameObjectBlock", "empty", "gameObjectContents", 
		"gameObjectContent", "statementList", "statementBlock", "statement", "repeatLoop", 
		"ifStatement", "statementExpression", "assignment", "expression", "sumExpression", 
		"factorExpression", "terminalExpression", "sumOperation", "factorOperation", 
		"functionInvocation", "memberAccess", "valueList", "value", "array"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'repeat'", "'if'", "'.'", "','", null, null, "'Screen'", 
		"'Entity'", "'MovePattern'", "'Map'", "'OnScreenEntered'", "'Entities'", 
		"'Exits'", "'Data'", "'Pattern'", null, null, null, null, "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'='", "'<'", "'>'", "'+'", "'-'", "'*'", 
		"'/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, "WS", "COMMENT", "SCREEN", "ENTITY", 
		"MOVE_PATTERN", "MAP", "ONSCREENENTERED", "ENTITIES", "EXITS", "DATA", 
		"PATTERN", "IDENTIFIER", "INT", "FLOAT", "STRING", "L_PARANTHESIS", "R_PARANTHESIS", 
		"L_BRACKET", "R_BRACKET", "L_BRACES", "R_BRACES", "ASSIGN_OP", "LESSTHAN_OP", 
		"GREATERTHAN_OP", "PLUS_OP", "MINUS_OP", "MULTIPLICATION_OP", "DIVISION_OP"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Dazel.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DazelParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DazelParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DazelParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GameObjectContext gameObject() {
			return GetRuleContext<GameObjectContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			gameObject();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameObjectContext : ParserRuleContext {
		public IToken gameObjectType;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DazelParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GameObjectBlockContext gameObjectBlock() {
			return GetRuleContext<GameObjectBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCREEN() { return GetToken(DazelParser.SCREEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENTITY() { return GetToken(DazelParser.ENTITY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MOVE_PATTERN() { return GetToken(DazelParser.MOVE_PATTERN, 0); }
		public GameObjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameObject; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterGameObject(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitGameObject(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameObject(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GameObjectContext gameObject() {
		GameObjectContext _localctx = new GameObjectContext(Context, State);
		EnterRule(_localctx, 2, RULE_gameObject);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			_localctx.gameObjectType = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCREEN) | (1L << ENTITY) | (1L << MOVE_PATTERN))) != 0)) ) {
				_localctx.gameObjectType = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 51;
			Match(IDENTIFIER);
			State = 52;
			gameObjectBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameObjectBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_BRACES() { return GetToken(DazelParser.L_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GameObjectContentsContext gameObjectContents() {
			return GetRuleContext<GameObjectContentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_BRACES() { return GetToken(DazelParser.R_BRACES, 0); }
		public GameObjectBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameObjectBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterGameObjectBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitGameObjectBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameObjectBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GameObjectBlockContext gameObjectBlock() {
		GameObjectBlockContext _localctx = new GameObjectBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_gameObjectBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(L_BRACES);
			State = 55;
			gameObjectContents();
			State = 56;
			Match(R_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EmptyContext : ParserRuleContext {
		public EmptyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_empty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterEmpty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitEmpty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EmptyContext empty() {
		EmptyContext _localctx = new EmptyContext(Context, State);
		EnterRule(_localctx, 6, RULE_empty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameObjectContentsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GameObjectContentContext gameObjectContent() {
			return GetRuleContext<GameObjectContentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GameObjectContentsContext gameObjectContents() {
			return GetRuleContext<GameObjectContentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyContext empty() {
			return GetRuleContext<EmptyContext>(0);
		}
		public GameObjectContentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameObjectContents; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterGameObjectContents(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitGameObjectContents(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameObjectContents(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GameObjectContentsContext gameObjectContents() {
		GameObjectContentsContext _localctx = new GameObjectContentsContext(Context, State);
		EnterRule(_localctx, 8, RULE_gameObjectContents);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60;
				gameObjectContent();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61;
				gameObjectContent();
				State = 62;
				gameObjectContents();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 64;
				empty();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameObjectContentContext : ParserRuleContext {
		public IToken gameObjectContentType;
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MAP() { return GetToken(DazelParser.MAP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ONSCREENENTERED() { return GetToken(DazelParser.ONSCREENENTERED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENTITIES() { return GetToken(DazelParser.ENTITIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXITS() { return GetToken(DazelParser.EXITS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DATA() { return GetToken(DazelParser.DATA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PATTERN() { return GetToken(DazelParser.PATTERN, 0); }
		public GameObjectContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameObjectContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterGameObjectContent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitGameObjectContent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameObjectContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GameObjectContentContext gameObjectContent() {
		GameObjectContentContext _localctx = new GameObjectContentContext(Context, State);
		EnterRule(_localctx, 10, RULE_gameObjectContent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			_localctx.gameObjectContentType = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAP) | (1L << ONSCREENENTERED) | (1L << ENTITIES) | (1L << EXITS) | (1L << DATA) | (1L << PATTERN))) != 0)) ) {
				_localctx.gameObjectContentType = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 68;
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyContext empty() {
			return GetRuleContext<EmptyContext>(0);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterStatementList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitStatementList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementListContext statementList() {
		StatementListContext _localctx = new StatementListContext(Context, State);
		EnterRule(_localctx, 12, RULE_statementList);
		try {
			State = 81;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 70;
				statement();
				State = 71;
				Match(T__0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73;
				statement();
				State = 74;
				Match(T__0);
				State = 75;
				statementList();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 77;
				statementBlock();
				State = 78;
				statementList();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 80;
				empty();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_BRACES() { return GetToken(DazelParser.L_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_BRACES() { return GetToken(DazelParser.R_BRACES, 0); }
		public StatementBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterStatementBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitStatementBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementBlockContext statementBlock() {
		StatementBlockContext _localctx = new StatementBlockContext(Context, State);
		EnterRule(_localctx, 14, RULE_statementBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(L_BRACES);
			State = 84;
			statementList();
			State = 85;
			Match(R_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RepeatLoopContext repeatLoop() {
			return GetRuleContext<RepeatLoopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementExpressionContext statementExpression() {
			return GetRuleContext<StatementExpressionContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 16, RULE_statement);
		try {
			State = 90;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				repeatLoop();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88;
				ifStatement();
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 3);
				{
				State = 89;
				statementExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RepeatLoopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_BRACES() { return GetToken(DazelParser.L_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_BRACES() { return GetToken(DazelParser.R_BRACES, 0); }
		public RepeatLoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_repeatLoop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterRepeatLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitRepeatLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepeatLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RepeatLoopContext repeatLoop() {
		RepeatLoopContext _localctx = new RepeatLoopContext(Context, State);
		EnterRule(_localctx, 18, RULE_repeatLoop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(T__1);
			State = 93;
			Match(L_BRACES);
			State = 94;
			statementList();
			State = 95;
			Match(R_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_BRACES() { return GetToken(DazelParser.L_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_BRACES() { return GetToken(DazelParser.R_BRACES, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDazelListener typedListener = listener as IDazelListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDazelVisitor<TResult> typedVisitor = visitor as IDazelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
